# meta-hackathon-final-idea

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  blog.md  blog_post.md  doc.txt  inference.py  openenv.yml  pyproject.toml  requirements.txt  trained_inference.py  verify.py
agents/: policy_model.py
assets/: karnataka_schemes_2025.json  kolar_weather_profile.json  tomato_growth_model.json
data/: scenario_generator.py
data_engine/: __init__.py  scenario_generator.py
demo/: run_simulation.py
docs/: 01_environment.md  02_reward_function.md  03_agent_config.md  04_learning_loop.md  05_tools_and_actions.md  06_system_workflow.md
env/: __init__.py  grader.py  models.py  siren_env.py
eval/: baseline_eval.py  plot_results.py  training_summary.md
evaluation/: metrics.py
reward/: reward_function.py
server/: __init__.py  app.py
simulator/: __init__.py  event_engine.py  farm_simulator.py
tasks/: __init__.py  event_scheduler.py  season_scenarios.py
tools/: __init__.py  credit_tool.py  govt_scheme_tool.py  mandi_price_tool.py  pest_alert_tool.py  soil_tool.py  weather_tool.py
training/: grpo_config.yaml  train_grpo_unsloth.ipynb  train_grpo_unsloth.py  train_ppo.py
utils/: helpers.py
world/: world_simulator.py
