[project]
name = "kisanagent"
version = "1.0.0"
description = "RL Environment for Indian Smallholder Farm Advisory — Meta-PyTorch OpenEnv Hackathon Finale 2026"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "KisanAgent Team"}
]
keywords = ["reinforcement-learning", "agriculture", "india", "openenv", "llm-agent"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.1.0",
    "trl>=0.7.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
kisanagent-server = "server.app:app"
kisanagent-eval   = "eval.baseline_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "env", "simulator", "tools", "tasks", "eval", "data_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
